<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_explorer</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="itshelp@gmail.com">neo</maintainer>
  <license>TODO: License declaration</license>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>slam_toolbox</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>turtlebot3_teleop</depend>
  <depend>turtlebot3_navigation2</depend>
  <depend>nav2_map_server</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
  <launch_plugins>
        <launch_plugin>launch</launch_plugin>
    </launch_plugins>
    <build_type>ament_python</build_type>
  </export>
</package>
